AV/AlgAnal/ProblemAlgorithmCON.css
#ProblemAlgorithmCON {
  height: 460px;
}

#ProblemAlgorithmCON .jsavline{
  height: 120px;
}

#ProblemAlgorithmCON .jsavhorizontalarray .jsavnode{
  min-width: 50px !important;
  max-width: 200px !important;
  min-height: 35px !important;
  max-height: 35px !important;
}

#ProblemAlgorithmCON .jsavcodeline{
  background-color: transparent;
  font-family:Helvetica, Arial, 'DejaVu Sans', 'Liberation Sans', Freesans, sans-serif !important;
  font-size: 14px;
}

.largeLabel{
  font-size: 18px; 
  text-align: center; 
}
.codeLabel{
  font-family:Helvetica, Arial, 'DejaVu Sans', 'Liberation Sans', Freesans, sans-serif;
  font-weight: bold;
  font-size: 16px;
}

